# rate-limiting

./: README.md
.github/workflows/: carbon_intensity_api.yml  docs_linting.yml  rate_limiter_rs.yml
carbon-intensity-api/: .dockerignore  Cargo.toml  Dockerfile  README.md  boot.sh  compose.yaml  distributed_test.js  docker-compose.yaml  justfile  load_test.js  nginx.conf  otel-collector.yaml
carbon-intensity-api/src/: application.rs  entities.rs  lib.rs  main.rs  settings.rs
carbon-intensity-api/src/middleware/: rate_limiter.rs
carbon-intensity-api/src/routes/: get_intensity.rs  health_check.rs  mod.rs
carbon-intensity-api/src/routes/intensity/: entities.rs  get_intensity.rs  mod.rs
carbon-intensity-api/tests/: integration.rs
rate-limiter-rs/: Cargo.toml  README.md  justfile
rate-limiter-rs/src/: builder.rs  builders.rs  entities.rs  errors.rs  factory.rs  lib.rs
rate-limiter-rs/src/builders/: fixed_window.rs  mod.rs  sliding_window.rs  token_bucket.rs
rate-limiter-rs/src/rate_limiters/: fixed_window.rs  mod.rs  sliding_window.rs  token_bucket.rs
