[package]
name = "carbon-intensity-api"
version = "0.1.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "carbon-intensity-api"

[dependencies]
actix-web = "4.9.0"
futures-util = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
rate-limiter-rs = { path = "../rate-limiter-rs"}
derive_more = { version = "1", features = ["display"] }
env_logger = "0.11.6"
log = "0.4.22"
config = "0.15.4"

[dev-dependencies]
rand = "0.8.5"
reqwest = {version = "0.12", features = ["json"]}
